[package]
name = "marketplacedescentralizado"
version = "0.1.0"
authors = [
    "[Agustin Mediotti] <[agustinmediotti@gmail.com]>, [Avila Tadeo] <[tadeo.i.avila@gmail.com]>, [Agustin Olthoff] <[agusoltghoff2002@gmail.com]>, [Juan Tettamanti] <[juan.tettamanti11@gmail.com]>",
]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
base64ct = "1.6.0"
ink_prelude = "5.1.1"

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
